CNSDEVCOLECT/force-app/main/default/objects/Arbol_Familias_Tipos_Seguros__mdt/Arbol_Familias_Tipos_Seguros__mdt.object-meta.xml
<CustomObject>
    <label>Árbol Familias Tipos Seguros</label>
    <pluralLabel>Árboles Familias Tipos Seguros</pluralLabel>
</CustomObject>