CNSDEVCOLECT/force-app/main/default/objects/Arbol_Familias_Tipos_Seguros__mdt/fields/Clasificaci_n_de_Consulta__c.field-meta.xml
<CustomField>
    <fullName>Clasificaci_n_de_Consulta__c</fullName>
    <label>Clasificación de Consulta</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Actualización</fullName>
                <default>true</default>
                <label>Actualización</label>
            </value>
            <value>
                <fullName>Apoyo Legal en un Siniestro de Vehículos</fullName>
            </value>
            <value>
                <fullName>Canales de Contacto con Proveedor de Asistencia</fullName>
            </value>
            <value>
                <fullName>Certificados</fullName>
            </value>
            <value>
                <fullName>Cobro/Depreciación por Daños Pre-existentes</fullName>
            </value>
            <value>
                <fullName>Detalle de Coberturas de Póliza Involucrados</fullName>
            </value>
            <value>
                <fullName>Documentos a Entregar Necesarios para Atención</fullName>
            </value>
            <value>
                <fullName>Emisión</fullName>
            </value>
            <value>
                <fullName>Estado</fullName>
            </value>
            <value>
                <fullName>Estado Cobro (servipag)</fullName>
            </value>
            <value>
                <fullName>Estado de Compra de Vehículo Nuevo por Reposición</fullName>
            </value>
            <value>
                <fullName>Estado de Emisión Orden de Trabajo/Autorización</fullName>
            </value>
            <value>
                <fullName>Estado de Entrega de Propuesta de Indemnización</fullName>
            </value>
            <value>
                <fullName>Estado de Pago de Indemnización</fullName>
            </value>
            <value>
                <fullName>Fecha Esperada de Entrega Vehículo Reparado</fullName>
            </value>
            <value>
                <fullName>Información sobre Servicios de Asistencia</fullName>
            </value>
            <value>
                <fullName>Liquidación Pensión</fullName>
            </value>
            <value>
                <fullName>Monto Pago</fullName>
            </value>
            <value>
                <fullName>N° de Siniestro y Liquidador Asignado</fullName>
            </value>
            <value>
                <fullName>Pago Asignación Familiar</fullName>
            </value>
            <value>
                <fullName>Pago de Prima durante Liquidación</fullName>
            </value>
            <value>
                <fullName>Plazos Asociados a una Etapa de la Atención</fullName>
            </value>
            <value>
                <fullName>Procedimiento</fullName>
            </value>
            <value>
                <fullName>Recaudación Primas</fullName>
            </value>
            <value>
                <fullName>Sobre Asignación de Liquidador y Taller del Siniestro</fullName>
            </value>
            <value>
                <fullName>Sobre Talleres Disponibles</fullName>
            </value>
            <value>
                <fullName>Vigencia</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>