CNSDEVCOLECT/force-app/main/default/objects/Arbol_Familias_Tipos_Seguros__mdt/fields/Clasificaci_n_de_Solicitud__c.field-meta.xml
<CustomField>
    <fullName>Clasificaci_n_de_Solicitud__c</fullName>
    <label>Clasificación de Solicitud</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Actualización</fullName>
                <default>true</default>
                <label>Actualización</label>
            </value>
            <value>
                <fullName>Anulación de Siniestro</fullName>
            </value>
            <value>
                <fullName>Aplicación de Deducible Inteligente en Siniestro</fullName>
            </value>
            <value>
                <fullName>Aumento de Cargas</fullName>
            </value>
            <value>
                <fullName>Cambio de Liquidador Asignado</fullName>
            </value>
            <value>
                <fullName>Cambio de Taller Asignado</fullName>
            </value>
            <value>
                <fullName>Cobertura en Siniestro de Daños Pre-existentes</fullName>
            </value>
            <value>
                <fullName>Cobertura Oncológica</fullName>
            </value>
            <value>
                <fullName>Detalle de Reparación Involucrada</fullName>
            </value>
            <value>
                <fullName>Detalle de Repuestos Involucrados en Reparación</fullName>
            </value>
            <value>
                <fullName>Disminución/Eliminación de Copago o Garantías de Servicios</fullName>
            </value>
            <value>
                <fullName>Disminución de Cargas</fullName>
            </value>
            <value>
                <fullName>Entrega de Informe/Preinforme de Liquidación</fullName>
            </value>
            <value>
                <fullName>Entrega de Servicios</fullName>
            </value>
            <value>
                <fullName>Estado de Atención al Tercero</fullName>
            </value>
            <value>
                <fullName>Extensión de Duración de Servicios</fullName>
            </value>
            <value>
                <fullName>Grabación Telefónica</fullName>
            </value>
            <value>
                <fullName>Impugnación de Siniestro</fullName>
            </value>
            <value>
                <fullName>Inicio Trámite</fullName>
            </value>
            <value>
                <fullName>Inspección de Vehículo en Taller</fullName>
            </value>
            <value>
                <fullName>Inspección de Vehículo Inmovilizado</fullName>
            </value>
            <value>
                <fullName>Nuevo beneficiario</fullName>
            </value>
            <value>
                <fullName>Póliza Vida individual</fullName>
            </value>
            <value>
                <fullName>Reapertura de Siniestro</fullName>
            </value>
            <value>
                <fullName>Reembolso sobre Gastos</fullName>
            </value>
            <value>
                <fullName>Renovación de Cargas</fullName>
            </value>
            <value>
                <fullName>Separación de Eventos</fullName>
            </value>
            <value>
                <fullName>Siniestro SEF</fullName>
            </value>
            <value>
                <fullName>Siniestro Vida individual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>