CNSDEVCOLECT/force-app/main/default/objects/Arbol_Familias_Tipos_Seguros__mdt/fields/Clasificaci_n_del_Reclamo__c.field-meta.xml
<CustomField>
    <fullName>Clasificaci_n_del_Reclamo__c</fullName>
    <label>Clasificación del Reclamo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cobro de Prima Posterior a Término de Atención</fullName>
                <default>true</default>
                <label>Cobro de Prima Posterior a Término de Atención</label>
            </value>
            <value>
                <fullName>Cobro Erróneo</fullName>
            </value>
            <value>
                <fullName>Daños al Vehículo en Taller</fullName>
            </value>
            <value>
                <fullName>Daños Ocasionados al Vehículo durante el Servicio</fullName>
            </value>
            <value>
                <fullName>DEF (Devolución Experiencia Favorable)</fullName>
            </value>
            <value>
                <fullName>Demora en la Emisión de la Orden de Trabajo/Autorización</fullName>
            </value>
            <value>
                <fullName>Demora en la Entrega del Vehículo</fullName>
            </value>
            <value>
                <fullName>Demora en la Inspección del Vehículo en Taller</fullName>
            </value>
            <value>
                <fullName>Desconformidad con Monto Indemnización Ofrecido</fullName>
            </value>
            <value>
                <fullName>Descuento Caja Compensación</fullName>
            </value>
            <value>
                <fullName>Descuento Institución Salud</fullName>
            </value>
            <value>
                <fullName>Desinformación sobre Estado de Liquidación</fullName>
            </value>
            <value>
                <fullName>Devolución de Prima</fullName>
            </value>
            <value>
                <fullName>Disconformidad con el Pago de Siniestro</fullName>
            </value>
            <value>
                <fullName>Disconformidad Resultado Liquidación de Siniestro</fullName>
            </value>
            <value>
                <fullName>Emisión Propuesta</fullName>
            </value>
            <value>
                <fullName>Estado Siniestros</fullName>
            </value>
            <value>
                <fullName>Facturación</fullName>
            </value>
            <value>
                <fullName>Falta de Acuse de Recibo post Envío Documentos</fullName>
            </value>
            <value>
                <fullName>Fuera de Promesa de Ingreso de Siniestro</fullName>
            </value>
            <value>
                <fullName>Gestión Mandato</fullName>
            </value>
            <value>
                <fullName>Imputación de Prima</fullName>
            </value>
            <value>
                <fullName>Incumplimiento de Plazo de Compra de Vehículo Nuevo</fullName>
            </value>
            <value>
                <fullName>Incumplimiento de Plazo de Envío de Evaluación de Cobertura</fullName>
            </value>
            <value>
                <fullName>Incumplimiento de Plazo de Envío de Propuesta Indemnizatoria</fullName>
            </value>
            <value>
                <fullName>Incumplimiento de Plazo de Pago de Indemnización</fullName>
            </value>
            <value>
                <fullName>Incumplimiento de Plazo de Pago de Indemnización Acordada</fullName>
            </value>
            <value>
                <fullName>Incumplimiento sobre Condiciones del Servicio</fullName>
            </value>
            <value>
                <fullName>Inspección</fullName>
            </value>
            <value>
                <fullName>Mala Calidad de Atención del Servicio</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>