CNSDEVCOLECT/force-app/main/default/objects/Arbol_Familias_Tipos_Seguros__mdt/fields/Familia__c.field-meta.xml
<CustomField>
    <fullName>Familia__c</fullName>
    <label>Familia</label>
    <length>255</length>
    <type>Text</type>
</CustomField>