CNSDEVCOLECT/force-app/main/default/objects/Arbol_Familias_Tipos_Seguros__mdt/fields/Linea_Producto_Seguros__c.field-meta.xml
<CustomField>
    <fullName>Linea_Producto_Seguros__c</fullName>
    <label>Linea - Producto Seguros</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Colectivos</fullName>
                <default>true</default>
                <label>Colectivos</label>
            </value>
            <value>
                <fullName>FFMM</fullName>
            </value>
            <value>
                <fullName>Generales</fullName>
            </value>
            <value>
                <fullName>Rentas Vitalicias</fullName>
            </value>
            <value>
                <fullName>Vida</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>