CNSDEVCOLECT/force-app/main/default/objects/Arbol_Familias_Tipos_Seguros__mdt/fields/Motivo_Anulaci_n__c.field-meta.xml
<CustomField>
    <fullName>Motivo_Anulaci_n__c</fullName>
    <label>Motivo Anulación</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Anulación a pedido del cliente</fullName>
                <default>true</default>
                <label>Anulación a pedido del cliente</label>
            </value>
            <value>
                <fullName>Motivos Economicos</fullName>
            </value>
            <value>
                <fullName>Mejor condición otra C.I.A.</fullName>
            </value>
            <value>
                <fullName>Venta de la materia asegurada</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>