CNSDEVCOLECT/force-app/main/default/objects/Arbol_Familias_Tipos_Seguros__mdt/fields/Motivo_Devoluci_n__c.field-meta.xml
<CustomField>
    <fullName>Motivo_Devoluci_n__c</fullName>
    <label>Motivo Devolución</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cargo duplicado</fullName>
                <default>true</default>
                <label>Cargo duplicado</label>
            </value>
            <value>
                <fullName>Pago anticipado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>