CNSDEVCOLECT/force-app/main/default/objects/Arbol_Familias_Tipos_Seguros__mdt/fields/No_requiere_subclasificacion__c.field-meta.xml
<CustomField>
    <fullName>No_requiere_subclasificacion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No requiere subclasificacion</label>
    <type>Checkbox</type>
</CustomField>