CNSDEVCOLECT/force-app/main/default/objects/Arbol_Familias_Tipos_Seguros__mdt/fields/Seccion__c.field-meta.xml
<CustomField>
    <fullName>Seccion__c</fullName>
    <label>Seccion</label>
    <length>100</length>
    <type>Text</type>
</CustomField>