CNSDEVCOLECT/force-app/main/default/objects/Arbol_Familias_Tipos_Seguros__mdt/fields/Subcategor_a__c.field-meta.xml
<CustomField>
    <fullName>Subcategor_a__c</fullName>
    <label>Subcategoría</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>¿Cómo funciona el deducile?</fullName>
                <default>true</default>
                <label>¿Cómo funciona el deducile?</label>
            </value>
            <value>
                <fullName>¿Cómo solicito un reembolso?</fullName>
            </value>
            <value>
                <fullName>¿Cuáles son mis topes?</fullName>
            </value>
            <value>
                <fullName>Actualización datos empresa (razón social, dirección)</fullName>
            </value>
            <value>
                <fullName>Actualización de contacto comisiones</fullName>
            </value>
            <value>
                <fullName>Agregar Cuenta Depósito Pago de Comisiones</fullName>
            </value>
            <value>
                <fullName>APP</fullName>
            </value>
            <value>
                <fullName>Asegurados Sin Activación de beneficios</fullName>
            </value>
            <value>
                <fullName>Baja MAL procesada (Asegurados)</fullName>
            </value>
            <value>
                <fullName>Baja NO procesada (Asegurados)</fullName>
            </value>
            <value>
                <fullName>Cambio de Intermediario</fullName>
            </value>
            <value>
                <fullName>Capital o Renta</fullName>
            </value>
            <value>
                <fullName>Certificado Cobertura</fullName>
            </value>
            <value>
                <fullName>Certificado Cobertura Masivo</fullName>
            </value>
            <value>
                <fullName>Clave Asegurado</fullName>
            </value>
            <value>
                <fullName>Clave colectivos consorcio Contratante</fullName>
            </value>
            <value>
                <fullName>Clave colectivos consorcio Corredor</fullName>
            </value>
            <value>
                <fullName>Clave Plataforma corredores contratante</fullName>
            </value>
            <value>
                <fullName>Clave Plataforma corredores corredor</fullName>
            </value>
            <value>
                <fullName>Clave Plataforma corredores jefe corredor</fullName>
            </value>
            <value>
                <fullName>Colectivos Consorcio</fullName>
            </value>
            <value>
                <fullName>Condicionado particular</fullName>
            </value>
            <value>
                <fullName>Contactos de cobranza y Cartas</fullName>
            </value>
            <value>
                <fullName>Contactos de Suscripción / Cartas de Rechazo</fullName>
            </value>
            <value>
                <fullName>Convenio Farmacia</fullName>
            </value>
            <value>
                <fullName>Convenio IMED</fullName>
            </value>
            <value>
                <fullName>Convenios Dentales</fullName>
            </value>
            <value>
                <fullName>Convenio Telemedicina</fullName>
            </value>
            <value>
                <fullName>Convenio Ventanilla Única</fullName>
            </value>
            <value>
                <fullName>Corte de beneficios</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>