CNSDEVCOLECT/force-app/main/default/objects/Arbol_Familias_Tipos_Seguros__mdt/fields/subseccion_1__c.field-meta.xml
<CustomField>
    <fullName>subseccion_1__c</fullName>
    <label>subseccion_1</label>
    <length>180</length>
    <type>Text</type>
</CustomField>