CNSDEVCOLECT/force-app/main/default/objects/Arbol_Familias_Tipos_Seguros__mdt/fields/subseccion_2__c.field-meta.xml
<CustomField>
    <fullName>subseccion_2__c</fullName>
    <label>subseccion_2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>