CNSDEVCOLECT/force-app/main/default/objects/Arbol_Familias_Tipos_Seguros__mdt/fields/subseccion_3__c.field-meta.xml
<CustomField>
    <fullName>subseccion_3__c</fullName>
    <label>subseccion_3</label>
    <length>50</length>
    <type>Text</type>
</CustomField>