CNSDEVCOLECT/force-app/main/default/objects/Arbol_Familias_Tipos_Seguros__mdt/fields/Subtipo__c.field-meta.xml
<CustomField>
    <fullName>Subtipo__c</fullName>
    <label>Subtipo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Acceso</fullName>
            </value>
            <value>
                <fullName>Actualización datos de producto</fullName>
            </value>
            <value>
                <fullName>Actualización de datos</fullName>
            </value>
            <value>
                <fullName>Actualización Firma del Cliente</fullName>
            </value>
            <value>
                <fullName>Actualización Información de Clientes</fullName>
            </value>
            <value>
                <fullName>APS</fullName>
            </value>
            <value>
                <fullName>Asesoría Legal</fullName>
            </value>
            <value>
                <fullName>Asignación Familiar</fullName>
            </value>
            <value>
                <fullName>Asistencia de Siniestros</fullName>
            </value>
            <value>
                <fullName>Asociadas a Producción S. Generales</fullName>
            </value>
            <value>
                <fullName>Asociadas a Producción S. Vida</fullName>
            </value>
            <value>
                <fullName>Atención al cliente</fullName>
            </value>
            <value>
                <fullName>Atención del Tercero Afectado en Siniestro</fullName>
            </value>
            <value>
                <fullName>Atención de Siniestro de Pérdida Parcial</fullName>
            </value>
            <value>
                <fullName>Atención de Siniestro de Pérdida Total</fullName>
            </value>
            <value>
                <fullName>Cambio vía de pago</fullName>
            </value>
            <value>
                <fullName>Campañas vigentes</fullName>
            </value>
            <value>
                <fullName>Cartola</fullName>
            </value>
            <value>
                <fullName>Certificados</fullName>
            </value>
            <value>
                <fullName>Cheques Pagados</fullName>
            </value>
            <value>
                <fullName>Coberturas</fullName>
            </value>
            <value>
                <fullName>Cobranza</fullName>
            </value>
            <value>
                <fullName>Comisiones y facturas</fullName>
            </value>
            <value>
                <fullName>Consulta en Póliza</fullName>
            </value>
            <value>
                <fullName>Consultas sobre Herramientas</fullName>
            </value>
            <value>
                <fullName>Creación Firma Transaccional</fullName>
            </value>
            <value>
                <fullName>Cuotas Mortuorias</fullName>
            </value>
            <value>
                <fullName>Cupón de pago</fullName>
            </value>
            <value>
                <fullName>Declaración de Renta</fullName>
            </value>
            <value>
                <fullName>Declaraciones Retenidas SII</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>