CNSDEVCOLECT/force-app/main/default/objects/Arbol_Familias_Tipos_Seguros__mdt/fields/Tipo_de_documento__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_documento__c</fullName>
    <label>Tipo de documento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Carta de Mora</fullName>
                <default>true</default>
                <label>Carta de Mora</label>
            </value>
            <value>
                <fullName>Carta de Renovación</fullName>
            </value>
            <value>
                <fullName>Carta Informativa</fullName>
            </value>
            <value>
                <fullName>Certificado de Cargas Legales</fullName>
            </value>
            <value>
                <fullName>Certificado de Cobertura</fullName>
            </value>
            <value>
                <fullName>Certificado de Cotizaciones de Salud</fullName>
            </value>
            <value>
                <fullName>Certificado de Cuenta Cte.</fullName>
            </value>
            <value>
                <fullName>Certificado de Termino Beneficio</fullName>
            </value>
            <value>
                <fullName>Certificado de Vigencia</fullName>
            </value>
            <value>
                <fullName>Certificado Estado Siniestro</fullName>
            </value>
            <value>
                <fullName>Certificado Tributario</fullName>
            </value>
            <value>
                <fullName>Certiificado de Pago</fullName>
            </value>
            <value>
                <fullName>Copia Beneficiarios Designados</fullName>
            </value>
            <value>
                <fullName>Copia Beneficiarios Vida</fullName>
            </value>
            <value>
                <fullName>Copia Cartola</fullName>
            </value>
            <value>
                <fullName>Copia de Factura</fullName>
            </value>
            <value>
                <fullName>Copia de Mandato</fullName>
            </value>
            <value>
                <fullName>Copia de Póliza</fullName>
            </value>
            <value>
                <fullName>Copia de Propuesta</fullName>
            </value>
            <value>
                <fullName>Copia Examenes Medicos</fullName>
            </value>
            <value>
                <fullName>Copia Liquidación de Siniestros</fullName>
            </value>
            <value>
                <fullName>Copia Liquidación Pensión</fullName>
            </value>
            <value>
                <fullName>Copia SAAP</fullName>
            </value>
            <value>
                <fullName>Cupón de Pago</fullName>
            </value>
            <value>
                <fullName>Cupón de Rehabilitación</fullName>
            </value>
            <value>
                <fullName>Cuponera</fullName>
            </value>
            <value>
                <fullName>Declaración Jurada (Op. Renta)</fullName>
            </value>
            <value>
                <fullName>Devolución originales siniestro</fullName>
            </value>
            <value>
                <fullName>Documentos de Siniestros</fullName>
            </value>
            <value>
                <fullName>Grabación Televenta</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>