CNSDEVCOLECT/force-app/main/default/objects/Arbol_Familias_Tipos_Seguros__mdt/fields/Tipo_documento__c.field-meta.xml
<CustomField>
    <fullName>Tipo_documento__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tipo documento</label>
    <type>Checkbox</type>
</CustomField>