CNSDEVCOLECT/force-app/main/default/objects/Arbol_Familias_Tipos_Seguros__mdt/fields/Tipo_Gesti_n_Pago__c.field-meta.xml
<CustomField>
    <fullName>Tipo_Gesti_n_Pago__c</fullName>
    <label>Tipo Gestión Pago</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>APS</fullName>
                <default>true</default>
                <label>APS</label>
            </value>
            <value>
                <fullName>Activación de Sobrevivencias</fullName>
            </value>
            <value>
                <fullName>Activar Pago Beneficiario</fullName>
            </value>
            <value>
                <fullName>Anticipos de Pensión</fullName>
            </value>
            <value>
                <fullName>Asignación Familiar</fullName>
            </value>
            <value>
                <fullName>Cuota Mortuoria</fullName>
            </value>
            <value>
                <fullName>Garantía Estatal</fullName>
            </value>
            <value>
                <fullName>Pensiones No Cobradas</fullName>
            </value>
            <value>
                <fullName>Periodo Garantizado</fullName>
            </value>
            <value>
                <fullName>Reemisión Pensión</fullName>
            </value>
            <value>
                <fullName>Retención Judicial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>