CNSDEVCOLECT/force-app/main/default/objects/Arbol_Familias_Tipos_Seguros__mdt/fields/Tipo_Modificaci_n__c.field-meta.xml
<CustomField>
    <fullName>Tipo_Modificaci_n__c</fullName>
    <label>Tipo Modificación</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Actualización Patente (solo provisoria a definitiva)</fullName>
                <default>true</default>
                <label>Actualización Patente (solo provisoria a definitiva)</label>
            </value>
            <value>
                <fullName>Anula/Desiste Endoso</fullName>
            </value>
            <value>
                <fullName>Anulación de Endoso</fullName>
            </value>
            <value>
                <fullName>Anulación de Propuesta</fullName>
            </value>
            <value>
                <fullName>Anulación de Siniestro</fullName>
            </value>
            <value>
                <fullName>Aplicación de Deducible Inteligente en Siniestro</fullName>
            </value>
            <value>
                <fullName>Apoyo Legal en un Siniestro de Vehículos</fullName>
            </value>
            <value>
                <fullName>Asignación Apoderado</fullName>
            </value>
            <value>
                <fullName>Aumento Capital</fullName>
            </value>
            <value>
                <fullName>Beneficiarios</fullName>
            </value>
            <value>
                <fullName>Cambio Beneficiario Designado</fullName>
            </value>
            <value>
                <fullName>Cambio de Clave</fullName>
            </value>
            <value>
                <fullName>Cambio de Liquidador Asignado</fullName>
            </value>
            <value>
                <fullName>Cambio de Taller Asignado</fullName>
            </value>
            <value>
                <fullName>Cambio Institución de Salud</fullName>
            </value>
            <value>
                <fullName>Cambio Receptor Pago Servipag</fullName>
            </value>
            <value>
                <fullName>Cambio Vía Pago</fullName>
            </value>
            <value>
                <fullName>Cobertura en Siniestro de Daños Pre-existentes</fullName>
            </value>
            <value>
                <fullName>Cobro Erróneo</fullName>
            </value>
            <value>
                <fullName>Contratante</fullName>
            </value>
            <value>
                <fullName>Daños al Vehículo en Taller</fullName>
            </value>
            <value>
                <fullName>Daños Ocasionados al Vehículo durante el Servicio</fullName>
            </value>
            <value>
                <fullName>Datos Materia Asegurada</fullName>
            </value>
            <value>
                <fullName>DEF (Devolución Experiencia Favorable)</fullName>
            </value>
            <value>
                <fullName>Demora en la Emisión de la Orden de Trabajo/Autorización</fullName>
            </value>
            <value>
                <fullName>Demora en la Entrega del Vehículo</fullName>
            </value>
            <value>
                <fullName>Demora en la Inspección del Vehículo en Taller</fullName>
            </value>
            <value>
                <fullName>Desbloqueo Clave</fullName>
            </value>
            <value>
                <fullName>Detalle de Reparación Involucrada</fullName>
            </value>
            <value>
                <fullName>Detalle de Repuestos Involucrados en Reparación</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>