CNSDEVCOLECT/force-app/main/default/objects/Arbol_Familias_Tipos_Seguros__mdt/fields/Tipo_Pago__c.field-meta.xml
<CustomField>
    <fullName>Tipo_Pago__c</fullName>
    <label>Tipo Pago</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Depósito</fullName>
                <default>true</default>
                <label>Depósito</label>
            </value>
            <value>
                <fullName>Vale Vista</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>