CNSDEVCOLECT/force-app/main/default/objects/Arbol_Familias_Tipos_Seguros__mdt/fields/Usar_Familia__c.field-meta.xml
<CustomField>
    <fullName>Usar_Familia__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Usar Familia</label>
    <type>Checkbox</type>
</CustomField>