CNSDEVCOLECT/force-app/main/default/objects/Arbol_Familias_Tipos_Seguros__mdt/fields/Usar_Linea__c.field-meta.xml
<CustomField>
    <fullName>Usar_Linea__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Usar Línea</label>
    <type>Checkbox</type>
</CustomField>