CNSDEVCOLECT/force-app/main/default/objects/Arbol_Familias_Tipos_Seguros__mdt/fields/V_a_de_pago__c.field-meta.xml
<CustomField>
    <fullName>V_a_de_pago__c</fullName>
    <label>Vía de pago</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>PAT</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>PAC</label>
            </value>
            <value>
                <fullName>Aviso Cobranza</fullName>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Descuento por Planilla</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>